[gd_scene load_steps=5 format=3 uid="uid://d383yyr156l1q"]

[ext_resource type="Script" path="res://scripts/Interactable.gd" id="1_al375"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hjo8c"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_dtd5c"]
material = SubResource("StandardMaterial3D_hjo8c")
size = Vector3(0.5, 0.5, 0.25)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ea1fa"]
points = PackedVector3Array(0.25, 0.25, 0.125, 0.25, 0.25, -0.125, -0.25, 0.25, 0.125, 0.25, -0.25, 0.125, 0.25, -0.25, -0.125, -0.25, 0.25, -0.125, -0.25, -0.25, 0.125, -0.25, -0.25, -0.125)

[node name="Interactable" type="StaticBody3D"]
collision_layer = 3
collision_mask = 0
script = ExtResource("1_al375")
display_text = "Test"
action_text = "XDDD"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.125)
mesh = SubResource("BoxMesh_dtd5c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.125)
shape = SubResource("ConvexPolygonShape3D_ea1fa")

[connection signal="focused" from="." to="." method="_on_focused"]
[connection signal="interacted" from="." to="." method="_on_interacted"]
[connection signal="unfocused" from="." to="." method="_on_unfocused"]
